@@ -68,6 +68,7 @@ Jesse Mayes <plasmasheep(at)gmail(dot)com> - Tango'ish Save All icon
 Eugene Arshinov <earshinov(at)gmail(dot)com> - Reload color schemes, split lines KB patches, and more
 Jon Strait <jstrait(at)moonloop(dot)net> - Markdown filetype patch
 Forgeot Eric <eforgeot(at)yahoo(dot)fr> - Txt2Tags filetype patch
+Lex Trotman <elextr<at>gmail<dot>com> - Build commands configuration improvements, and more
 
 Translators:
 ------------
